fixed mobile white space

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ html, body {
 
 
 body{
+    padding-top: env(safe-area-inset-top);
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    padding-bottom: env(safe-area-inset-bottom);
     background: radial-gradient(circle,rgba(28, 29, 33, 1) 0%, rgba(32, 33, 36, 1) 100%);
     padding: 3% 5%;
     font-family: 'Inter', sans-serif;
